<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="itemDetailVM"
            type="com.davek.expirydatetracker.viewmodel.ItemDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        tools:context=".fragment.ItemDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_food_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/item_name_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_food_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="@color/edit_text_background"
                android:hint="@string/hint_required_field"
                android:imeOptions="actionDone"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@={itemDetailVM.foodName}"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/horizontal_divider_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_expiry_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/item_expiry_date_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvbt_expiry_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical|end"
                android:onClick="@{() -> itemDetailVM.onDateClick()}"
                android:padding="10dp"
                android:singleLine="true"
                tools:text="2021-01-02"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:expiryDate="@{itemDetailVM.expiryDate}" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/horizontal_divider_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/item_comment_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_note"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="@color/edit_text_background"
                android:hint="@string/hint_optional_field"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|textMultiLine"
                android:gravity="top|start"
                android:padding="10dp"
                android:text="@={itemDetailVM.note}"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:importantForAutofill="no" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/horizontal_divider_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quantity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:paddingBottom="10dp"
                android:text="@string/item_quantity_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3"
                android:text="@{itemDetailVM.quantity.toString()}"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_title" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/quantity_decrease_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fab_content_description_decrease_quantity"
                android:onClick="@{() -> itemDetailVM.onQuantityDecreaseButtonClick()}"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_title"
                app:srcCompat="@drawable/ic_baseline_remove_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/quantity_increase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fab_content_description_increase_quantity"
                android:onClick="@{() -> itemDetailVM.onQuantityIncreaseButtonClick()}"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_quantity"
                app:layout_constraintTop_toBottomOf="@+id/quantity_title"
                app:srcCompat="@drawable/ic_add_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/horizontal_divider_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:layout_marginStart="10dp"
                android:text="@string/item_notification_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_notification_days"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="top"
                android:checked="@{itemDetailVM.isNotificationOn}"
                android:onCheckedChanged="@{(compound, checked) -> itemDetailVM.onNotificationToggleChanged(checked)}" />
        </LinearLayout>

    </LinearLayout>
</layout>